tests/fixtures/rbi_no_proto.rbi
def untyped(x)
end

def no_arg
end

def partial(x) => nil
end
